[GB.WEB.FORM] * NEW: WebScrollView: EnsureVisible() is new method that ensures a specific ScrollView child is visible to the screen. * NEW: WebTable: SHIFT + Click allows to select or unselect a range of rows at once.
git-svn-id: svn://localhost/gambas/trunk@8123 867c0c6c-44f3-4631-809d-bfa615b0a4ec

--- a/comp/src/gb.web.form/style.css
+++ b/comp/src/gb.web.form/style.css
@@ -36,6 +36,12 @@ P:first-child,UL:first-child,OL:first-child {
   margin-top: 0;
 }*/
 
+.gw-unselectable {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+}
+
 .gw-hidden {
   display: none !important;
 }
